--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "7zip-bin": "^4.1.0",
+    "cacheable-request": "^7.0.1",
     "electron-json-storage": "^4.1.8",
     "electron-window-state": "^5.0.3",
     "gm": "^1.23.1",
