--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
   },
   "dependencies": {
     "7zip-bin": "^4.1.0",
-    "cacheable-request": "^7.0.1",
     "electron-json-storage": "^4.1.8",
     "electron-window-state": "^5.0.3",
     "gm": "^1.23.1",
@@ -67,6 +66,7 @@
     "node-7z": "^1.1.0",
     "pdfjs-dist": "^2.2.228",
     "request": "^2.88.0",
+    "request-promise-cache": "^2.0.1",
     "sha1": "^1.1.1",
     "sharp": "^0.23.4",
     "tar-fs": "^2.0.0",
